fix: vertical overflow

--- a/styles/global.css
+++ b/styles/global.css
@@ -74,3 +74,7 @@ li {
 a {
   color: #4caedb;
 }
+
+body {
+  overflow-x: hidden;
+}
